# ovdisis

./: .cvsignore  .gitignore  AUTHORS  CHANGES  ChangeLog  FUNCS  Makefile  Makefile.am  Makefile.in  Makefile.mint  Makefile.purec  NEWS  OVDISIS-VERSION  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  extern_ovdisis.h  libtool  mincl.mint  mkinstalldirs  otestis.c  ovdisis-config.in  ovdisis.m4  ovdisis.m4.in  vdidefs.h
fntread/: .cvsignore  .gitignore  Makefile.am  Makefile.in  fntread.c
src/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.mint  Makefile.old  Makefile.purec  defcmap.h  event.c  event.h  fonts.h  inits.c  inits.h  keyboard.c  keyboard.h  mouse.c  mouse.h  ovdi_more.c  ovdi_more.h  ovdisis.h  ovdisis_keyboard.h  ovdisis_types.h  system_6x6.c  system_8x16.c  system_8x8.c  timer.c  timer.h  various.c  various.h  vdi_call.c  vdi_call_mint.c  vdi_call_purec.s  vdi_characters.c  vdi_characters.h  vdi_control.c  vdi_control.h  vdi_device.c  vdi_device.h  vdi_fill.c  (+22 more)
src/fonts/: Makefile  fntread.c  system_6x6.c  system_8x16.c  system_8x8.c
src/visuals/: Makefile.am
src/visuals/ggi/: Makefile.am  ggi_visual.h  ggi_visual_blit.c  ggi_visual_blit.h  ggi_visual_cmap.c  ggi_visual_cmap.h  ggi_visual_control.c  ggi_visual_control.h  ggi_visual_event.c  ggi_visual_event.h  ggi_visual_init.c  ggi_visual_init.h  ggi_visual_mouse.c  ggi_visual_mouse.h  ggi_visual_mutex.c  ggi_visual_mutex.h  ggi_visual_text.c  ggi_visual_text.h  ggi_visual_various.c  ggi_visual_various.h
src/visuals/mw/: Makefile.am  mw_visual.h
src/visuals/ofbis/: Makefile.am  ofbis_visual.h  ofbis_visual_cmap.c  ofbis_visual_cmap.h  ofbis_visual_control.c  ofbis_visual_control.h  ofbis_visual_event.c  ofbis_visual_event.h  ofbis_visual_init.c  ofbis_visual_init.h  ofbis_visual_mouse.c  ofbis_visual_mouse.h  ofbis_visual_mutex.c  ofbis_visual_mutex.h  ofbis_visual_various.c  ofbis_visual_various.h
src/visuals/sdl/: Makefile.am  sdl_visual.h  sdl_visual_blit.c  sdl_visual_blit.h  sdl_visual_cmap.c  sdl_visual_cmap.h  sdl_visual_control.c  sdl_visual_control.h  sdl_visual_event.c  sdl_visual_event.h  sdl_visual_init.c  sdl_visual_mouse.c  sdl_visual_mouse.h  sdl_visual_mutex.c  sdl_visual_mutex.h  sdl_visual_text.c  sdl_visual_text.h  sdl_visual_various.c  sdl_visual_various.h
test/: Makefile.am  otestis.c
test/mouse/: .gitignore  Makefile.am  test_mouse.c
test/workstations/: .gitignore  Makefile.am  test_workstations.c
vdi_dump/: .cvsignore  256_dump  Makefile  Makefile.am  Makefile.in  Makefile.old  tc_dump  vdi_dump.c
vdi_dump/outputs/: lna_auto.out  lna_nvdi.out  lna_vdi.out  nvdi.out  ovdisis.out  vdi.out
vdibind/: Makefile  Makefile.am  Makefile.in  vdibind.c  vdibind.h
