# Make a shared library using libtool

lib_LTLIBRARIES = libovdisis.la

libovdisis_la_SOURCES = \
	vdi_call.c vdi_characters.c vdi_control.c vdi_various.c vdi_fill.c \
	vdi_gdps.c vdi_line.c vdi_marker.c vdi_mouse.c vdi_raster.c \
	vdi_text.c various.c ovdi_more.c inits.c system_6x6.c system_8x8.c \
	system_8x16.c fonts.h ovdisis.h ovdi_more.h
